# GrapicarStudioSamples

./: README.md
AnimationTransition_Sample/animation/: nav.animation
AnimationTransition_Sample/cache/compile/src/: AnimatorStateMachine.h.json
AnimationTransition_Sample/prjout/: build.json
AnimationTransition_Sample/src/: AnimatorStateMachine.cpp
Animator_Sample/: Animator_Sample.xpj
Animator_Sample/animation/: sample3.controller
Animator_Sample/cache/compile/src/: animation01.h.json
Animator_Sample/src/: AnimationOpacity.h  AnimationSameController.cpp  AnimationSameController.h
CellImageMixer_Sample/: PrefabSample.prefab
CellImageMixer_Sample/cache/compile/src/: cell02.h.json  cell03.h.json
CellImageMixer_Sample/prjout/: build.json
CellImageMixer_Sample/src/: app_main.cpp  cell01.h  cell03.cpp
Gauges_Sample/animation/: gauges.controller
Gauges_Sample/cache/compile/src/: LeftGauge.h.json
Image_Sample/: Image_Sample.xpj
Keyframe_Sample/: Keyframe_Sample.gcp  Keyframe_Sample.xpj
Keyframe_Sample/prjout/: build.json
Light_Sample/: Light_Sample.gcp  Light_Sample.xpj
NinePatch_Sample/: NinePatch_Sample.xpj
NinePatch_Sample/cache/compile/src/: second.h.json
NinePatch_Sample/prjout/: build.json
NinePatch_Sample/src/: four.cpp  four.h  second.cpp  third.cpp
Playable_Sample/: Playable_Sample.gcp
Playable_Sample/animation/: Sun.controller  earth_rotation_revolution.animation  moon.animation
Playable_Sample/playable/: space.playable
Samples/AnimationTransition_Sample/: AnimationTransition_Sample.xpj
Samples/AnimationTransition_Sample/animation/: music.animation
Samples/AnimationTransition_Sample/src/: AnimatorStateMachine.h  action_instance.cpp
Samples/Animator_Sample/animation/: blink.animation  pos.animation  sample01.controller  sample02.controller  withChild.animation
Samples/Animator_Sample/cache/compile/src/: AnimationAction.h.json  AnimationClamp.h.json  AnimationOpacity.h.json  AnimationSameController.h.json
Samples/Animator_Sample/src/: AnimationAction.cpp  AnimationClamp.cpp  AnimationOpacity.cpp  AnimationWithChild.cpp  AnimationWithChild.h  action_instance.cpp
Samples/Camera_Sample/: Camera_Sample.gcp  Camera_Sample.xpj  README.md
Samples/CellImageMixer_Sample/: CellImageMixer_Sample.xpj
Samples/CellImageMixer_Sample/src/: cell01.cpp  cell02.h  cell03.h
Samples/Gauges_Sample/: Gauges_Sample.xpj
Samples/Gauges_Sample/prjout/: build.json
Samples/Gauges_Sample/src/: LeftGauge.h  action_instance.cpp
Samples/Keyframe_Sample/: README.md
Samples/Keyframe_Sample/animation/: Basketball_Bounce.animation  basketball.controller
Samples/Keyframe_Sample/src/: action_instance.cpp
Samples/Light_Sample/: .gitignore  clear.bat
Samples/Mesh_Sample/: Mesh_Sample.gcp  Mesh_Sample.xpj
Samples/NinePatch_Sample/: NinePatch_Sample.gcp
Samples/NinePatch_Sample/src/: app_main.cpp  first.h  second.h  third.h
Samples/Playable_Sample/: Playable_Sample.xpj  copy_base.bat
Samples/Playable_Sample/animation/: Earth.controller  Moon.controller  rotation.animation
Samples/Playable_Sample/src/: app_main.cpp
Samples/Spline_Sample/prjout/: build.json
Samples/Theming_Sample/: Theming_Sample.xpj
Samples/Theming_Sample/animation/: Car.controller  back.animation  eco.controller  eco_intro - 복사본.animation  eco_intro.animation  intro.animation  sport_intro.animation
Samples/Theming_Sample/prjout/: build.json
Samples/Theming_Sample/src/: Cluster.cpp  Cluster.h
Spline_Sample/: Spline_Sample.xpj
Spline_Sample/src/: angle.cpp  angle.h
Text_Sample/: Text_Sample.xpj
Theming_Sample/: Theming_Sample.gcp
Theming_Sample/animation/: Sport.controller  eco_outro.animation  normal_intro.animation  sport_outro.animation  sport_speed.controller
Theming_Sample/cache/compile/src/: CarGear.h.json  SportRpmGauge.h.json  SportRpmText.h.json  SportRpmText02.h.json  SportSpeedGauge.h.json
activity-transitions/: activity-transitions.gcp  activity-transitions.xpj
activity-transitions/animation/: transition.controller
album/: album.gcp  album.xpj
album/prefab/: tutorial.prefab
album/prjout/: build.json
album/src/: action_instance.cpp  album.cpp  album.h
animator/: animator.gcp  animator.xpj
animator/animation/: sample05.controller  scale.animation
animator/cache/compile/src/: AnimationWithChild.h.json
animator/prjout/: build.json
animator/src/: AnimationAction.h  AnimationClamp.h
camera/: camera.xpj
cell-image-mixer/: cell-image-mixer.gcp  cell-image-mixer.xpj
cell-image-mixer/src/: action_instance.cpp  cell02.cpp
gauges/: gauges.gcp  gauges.xpj
gauges/animation/: acc.animation
gauges/src/: LeftGauge.cpp  RightGauge.cpp  RightGauge.h
gauges_Sample/: Digital_Gauges.gcp  Digital_Gauges.xpj
gauges_Sample/cache/compile/src/: fuel.h.json
gauges_Sample/prjout/: build.json
gauges_Sample/src/: action_instance.cpp  fuel.cpp  fuel.h
image/: CMakeLists.txt  image.gcp  image.xpj
image/prjout/: build.json
keyframe-animations/: keyframe-animations.xpj
light/: light.xpj
light/prjout/: build.json
mesh/: mesh.xpj
meter/: Needle_Gauge.gcp  Needle_Gauge.xpj
meter/cache/compile/src/: speed_needle_pivot.h.json  speed_number.h.json
meter/prjout/: build.json
meter/src/: action_instance.cpp  speed_needle_pivot.cpp  speed_needle_pivot.h  speed_number.cpp  speed_number.h
nine-patch/: nine-patch.xpj
nine-patch/src/: action_instance.cpp  first.cpp
particleDemo/: fire.prefab  particleDemo.gcp  particleDemo.xpj
particleDemo/src/: app_main.cpp
playable/: playable.xpj
playable/prjout/: build.json
scene-transition/: theming.xpj
scene-transition/animation/: eco_rpm.controller  normal.controller  normal_outro.animation  rpm_intro.animation
scene-transition/cache/compile/src/: Car01.h.json  CarLights.h.json  EcoSpeed.h.json
scene-transition/src/: action_instance.cpp
spline/: spline.gcp  spline.xpj
spline/cache/compile/src/: angle.h.json
text/: text.gcp  text.xpj
theming/animation/: acc.animation  sport_rpm.controller
theming/cache/compile/src/: CarEngine.h.json  SportRpmText03.h.json
(+15 files in other folders)
